--- a/Project2/TCCart/app/src/main/res/layout/activity_add_customer.xml
+++ b/Project2/TCCart/app/src/main/res/layout/activity_add_customer.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.gatech.seclass.tccart.HomeActivity">
+    tools:context="edu.gatech.seclass.tccart.AddCustomerActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -23,8 +23,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Home"
-                android:id="@+id/textView" />
+                android:text="Add New Customer"
+                android:id="@+id/textView7" />
         </LinearLayout>
 
         <LinearLayout
@@ -32,41 +32,51 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
-                android:layout_width="0dp"
+            <TextView
+                android:layout_width="75dp"
                 android:layout_height="wrap_content"
-                android:text="View All Customers"
-                android:id="@+id/viewAllCustomersButton"
-                android:layout_weight="1"
-                android:onClick="onButtonClick" />
-        </LinearLayout>
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Name:"
+                android:id="@+id/textView8" />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:layout_width="0dp"
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Scan Customer Card"
-                android:id="@+id/scanCustomerCardButton"
-                android:layout_weight="1"
-                android:onClick="onButtonClick" />
+                android:id="@+id/addCustomerNameText" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Email:"
+                android:id="@+id/textView9" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:id="@+id/addCustomerEmailText" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Customer"
-                android:id="@+id/addHomeCustomerButton"
+                android:id="@+id/addCustomerButton"
                 android:layout_weight="1"
-                android:onClick="onButtonClick" />
+                android:onClick="onCustomerButtonClick" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
