Add ability to edit customers

--- a/Project2/TCCart/app/src/main/res/layout/activity_customer.xml
+++ b/Project2/TCCart/app/src/main/res/layout/activity_customer.xml
@@ -36,7 +36,7 @@
                 android:layout_width="135dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Customer ID:"
+                android:text="ID:"
                 android:id="@+id/textView2" />
 
             <TextView
@@ -86,6 +86,20 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="&lt;customer email>"
                 android:id="@+id/customerEmailText" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:id="@+id/editCustomerButton"
+                android:layout_weight="1"
+                android:onClick="onButtonClick" />
         </LinearLayout>
 
     </LinearLayout>
