New process purchase feature (incomplete)

--- a/Project2/TCCart/app/src/main/res/layout/activity_customer.xml
+++ b/Project2/TCCart/app/src/main/res/layout/activity_customer.xml
@@ -102,6 +102,19 @@
                 android:onClick="onButtonClick" />
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Start Transaction"
+                android:id="@+id/startTransactionButton"
+                android:onClick="onButtonClick" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
