--- a/Project2/TCCart/app/src/main/res/layout/activity_add_customer.xml
+++ b/Project2/TCCart/app/src/main/res/layout/activity_add_customer.xml
@@ -68,7 +68,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <Button
                 android:layout_width="wrap_content"
@@ -76,6 +76,20 @@
                 android:text="Add Customer"
                 android:id="@+id/addCustomerButton"
                 android:layout_weight="1"
+                android:onClick="onCustomerButtonClick" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:id="@+id/cancelAddCustomer"
                 android:onClick="onCustomerButtonClick" />
         </LinearLayout>
     </LinearLayout>
