--- a/Project2/TCCart/app/src/main/res/layout/activity_customer.xml
+++ b/Project2/TCCart/app/src/main/res/layout/activity_customer.xml
@@ -125,8 +125,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Transactions"
-                android:id="@+id/button"
-                android:layout_weight="1" />
+                android:id="@+id/customerTransactionsButton"
+                android:layout_weight="1"
+                android:onClick="onButtonClick" />
         </LinearLayout>
 
     </LinearLayout>
